Fix issue: N+1 query problems

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
         "livewire/livewire": "^2.3"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.5",
+        "beyondcode/laravel-query-detector": "^1.4",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.4.2",
